# vinfony

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md  imgui.ini  kosongg.ini  output.txt  plot.py  run.py  vinfony.icns
configs/: vinfony.ini.example
examples/: circularfifo1.h  test_loader.cpp  test_model.cpp  test_sequencer.cpp  tsf_example1.cpp  tsf_example2.cpp  tsf_example3.cpp
modules/: shared.hpp
src/: BaseMidiOut.cpp  BaseMidiOut.hpp  BassMidiDev.cpp  BassMidiDev.hpp  DawDisplay.hpp  DawDoc.cpp  DawDoc.hpp  DawMain.cpp  DawMain.hpp  DawNote.hpp  DawSeq.cpp  DawSeq.hpp  DawSeqNames.cpp  DawSoundFont.cpp  DawSoundFont.hpp  DawSysEx.cpp  DawSysEx.hpp  DawTrack.cpp  DawTrack.hpp  DawTrackNotes.cpp  DawTrackNotes.hpp  Globals.cpp  Globals.hpp  IDawSeq.hpp  IDawTrack.hpp  IDawTrackNotes.hpp  MainApp.cpp  MainApp.hpp  MainApp.mm  Misc.cpp  Misc.hpp  PianoButton.cpp  PianoButton.hpp  TsfDev.cpp  TsfDev.hpp  circularfifo1.h  globals.hpp  mainapp.hpp
src/Interfaces/: DawSeq.hpp
src/UI/: DawMain.cpp  DawMain.hpp  DawMainProject.cpp  DawMainProject.hpp  DawPianoRoll.cpp  DawPianoRoll.hpp  DawSoundFont.cpp  DawSoundFont.hpp  MainWidget.cpp  MainWidget.hpp  PianoButton.cpp  PianoButton.hpp  Splitter.cpp  UI.hpp
src/modules/: shared.cpp  shared.hpp  shared_imgui.hpp
